adding perennial tab

--- a/public/perennial.html
+++ b/public/perennial.html
@@ -1,17 +1,33 @@
 <html>
+<head>
+	<meta charset = "UTF-8">
+	<title>Wo We Are</title>
+	<link rel = "stylesheet" type = "text/css" href = "mainstyle.css" />
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans|Work+Sans" rel="stylesheet">
+</head>
 <body>
-PERENNIAL LOGO HERE
-A farming resource management game.<br>
-Play as a woman tending her garden throughout the years.<br>
-As the seasons change, discover new plants to decorate your garden.<br>
 
-<section>
-DOWNLOADS
-</section>
+NAVIGATION BAR HERE
 
-<section>
-DELIVERABLES
-</section>
+<div>
+	<div class="downloadsMainSection">
+		<img class="twoCanGamesLogoBig" src="images/Perennial_Logo@4x.png" alt="Mountain View"><br>
+
+		<div class="homeSubtitle">
+		A farming resource management game.<br>
+		Play as a woman tending her garden throughout the years.<br>
+		As the seasons change, discover new plants to decorate your garden.<br>
+		</div>
+
+		<div>
+		DOWNLOADS
+		</div>
+
+		<div>
+		DELIVERABLES
+		</div>
+	</div>
+</div>
 
 Downloads
 <section>
