more perennial tab work

--- a/public/perennial.html
+++ b/public/perennial.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset = "UTF-8">
-	<title>Wo We Are</title>
+	<title>Perennial</title>
 	<link rel = "stylesheet" type = "text/css" href = "mainstyle.css" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|Work+Sans" rel="stylesheet">
 </head>
@@ -19,36 +19,47 @@ NAVIGATION BAR HERE
 		As the seasons change, discover new plants to decorate your garden.<br>
 		</div>
 
-		<div>
-		DOWNLOADS
-		</div>
+		<div class="bookmarks">
+			<div class="bookmarkLink">
+				<a href="#downloads">
+					DOWNLOADS
+				</a>
+			</div>
 
-		<div>
-		DELIVERABLES
+			<div class="bookmarkLink">
+				<a href="#deliverables">
+					DELIVERABLES
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
 
-Downloads
-<section>
-DOWNLOAD ALPHA
-</section>
+<div id="downloads">
+	Downloads
+	<div>
+		DOWNLOAD ALPHA
+	</div>
 
-<section>
-DOWNLOAD BETA
-</section>
+	<div>
+		DOWNLOAD BETA
+	</div>
+</div>
 
-Project Deliverables
-<section>
-TREATMENT DOCUMENT
-</section>
+<div id="deliverables">
+	Project Deliverables
+	<section>
+	TREATMENT DOCUMENT
+	</section>
 
-<section>
-ALPHA PRESENTATION
-</section>
+	<section>
+	ALPHA PRESENTATION
+	</section>
 
-<section>
-BETA PRESENTATION
-</section>
+	<section>
+	BETA PRESENTATION
+	</section>
+</div>
+
 </body>
 </html>
