--- a/public/whoweare.html
+++ b/public/whoweare.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset = "UTF-8">
-	<title>Wo We Are</title>
+	<title>Who We Are</title>
 	<link rel = "stylesheet" type = "text/css" href = "mainstyle.css" />
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans|Work+Sans" rel="stylesheet">
 </head>
