lots of placement and styling done for perennial tab

--- a/public/perennial.html
+++ b/public/perennial.html
@@ -10,55 +10,53 @@
 NAVIGATION BAR HERE
 
 <div>
+	<img class="twoCanGamesLogoBig" src="images/Perennial_Logo@4x.png" alt="Mountain View">
 	<div class="downloadsMainSection">
 		<img class="twoCanGamesLogoBig" src="images/Perennial_Logo@4x.png" alt="Mountain View"><br>
 
-		<div class="homeSubtitle">
+		<div class="perennialSubtitle">
 		A farming resource management game.<br>
 		Play as a woman tending her garden throughout the years.<br>
 		As the seasons change, discover new plants to decorate your garden.<br>
 		</div>
 
 		<div class="bookmarks">
-			<div class="bookmarkLink">
-				<a href="#downloads">
-					DOWNLOADS
-				</a>
-			</div>
+			<a class="bookmarkLink" href="#downloads">
+				DOWNLOADS
+			</a>
 
-			<div class="bookmarkLink">
-				<a href="#deliverables">
-					DELIVERABLES
-				</a>
-			</div>
+			<a class="bookmarkLink" href="#deliverables">
+				DELIVERABLES
+			</a>
 		</div>
 	</div>
 </div>
 
-<div id="downloads">
-	Downloads
-	<div>
+<div id="downloads" class="downloads">
+	<div class="downloadLinkTitle">Downloads<br></div>
+	<div class="downloadsLink">
 		DOWNLOAD ALPHA
 	</div>
 
-	<div>
+	<div class="downloadsLink">
 		DOWNLOAD BETA
 	</div>
 </div>
 
-<div id="deliverables">
-	Project Deliverables
-	<section>
-	TREATMENT DOCUMENT
-	</section>
+<div id="deliverables" class="deliverables">
+	
+	<div class="downloadLinkTitle">Project Deliverables<br></div>
+	<div class="downloadsLink">
+		TREATMENT DOCUMENT
+	</div>
 
-	<section>
-	ALPHA PRESENTATION
-	</section>
+	<div class="downloadsLink">
+		ALPHA PRESENTATION
+	</div>
 
-	<section>
-	BETA PRESENTATION
-	</section>
+	<div class="downloadsLink">
+		BETA PRESENTATION
+	</div>
 </div>
 
 </body>
