working on blurry background image clipping

--- a/public/perennial.html
+++ b/public/perennial.html
@@ -10,7 +10,7 @@
 NAVIGATION BAR HERE
 
 <div>
-	<img class="twoCanGamesLogoBig" src="images/Perennial_Logo@4x.png" alt="Mountain View">
+	<img class="downloadsBackgroundImage" src="images/blurryflowers.jpg" alt="Mountain View">
 	<div class="downloadsMainSection">
 		<img class="twoCanGamesLogoBig" src="images/Perennial_Logo@4x.png" alt="Mountain View"><br>
 
