done with perennial tab layout

--- a/public/perennial.html
+++ b/public/perennial.html
@@ -10,7 +10,6 @@
 NAVIGATION BAR HERE
 
 <div>
-	<img class="downloadsBackgroundImage" src="images/blurryflowers.jpg" alt="Mountain View">
 	<div class="downloadsMainSection">
 		<img class="twoCanGamesLogoBig" src="images/Perennial_Logo@4x.png" alt="Mountain View"><br>
 
@@ -34,29 +33,29 @@ NAVIGATION BAR HERE
 
 <div id="downloads" class="downloads">
 	<div class="downloadLinkTitle">Downloads<br></div>
-	<div class="downloadsLink">
+	<a class="downloadsLink" href="/downloadalpha">
 		DOWNLOAD ALPHA
-	</div>
+	</a>
 
-	<div class="downloadsLink">
+	<a class="downloadsLink" href="/downloadbeta">
 		DOWNLOAD BETA
-	</div>
+	</a>
 </div>
 
 <div id="deliverables" class="deliverables">
 	
 	<div class="downloadLinkTitle">Project Deliverables<br></div>
-	<div class="downloadsLink">
+	<a class="downloadsLink" href="/downloads/treatmentdocument.pdf">
 		TREATMENT DOCUMENT
-	</div>
+	</a>
 
-	<div class="downloadsLink">
+	<a class="downloadsLink" href="/downloadalphapresentation">
 		ALPHA PRESENTATION
-	</div>
+	</a>
 
-	<div class="downloadsLink">
+	<a class="downloadsLink" href="/downloadbetapresentation">
 		BETA PRESENTATION
-	</div>
+	</a>
 </div>
 
 </body>
