cool art update

--- a/public/blog.html
+++ b/public/blog.html
@@ -24,6 +24,17 @@ NAVIGATION BAR HERE
 
 <div class="blogPiece">
 	<div class="title">
+		Cool title here
+	</div>
+	<div class="date">
+		4/21/2017
+	</div>
+	<img class="thirdLengthImage" src="/images/blog/raspberry.png" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/wateringcan.png" alt="Cool Pic">
+</div>
+
+<div class="blogPiece">
+	<div class="title">
 		Small Art update
 	</div>
 	<div class="date">
