--- a/public/blog.html
+++ b/public/blog.html
@@ -11,6 +11,25 @@ NAVIGATION BAR HERE
 
 <div class="blogPiece">
 	<div class="title">
+		﻿Update After Website Migration 
+	</div>
+	<div class="date">
+		4/21/2017
+	</div>
+	<div class="description">
+		There's a gap in our posts because we migrated websites! Hopefully you enjoy this new site. Here's the art that happened between the last post and this one.
+	</div>
+	<img class="thirdLengthImage" src="/images/blog/banana.png" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/blueberry.png" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/child.png" alt="Cool Pic">
+
+	<img class="thirdLengthImage" src="/images/blog/gatepost.png" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/house.png" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/pregnant.png" alt="Cool Pic">
+</div>
+
+<div class="blogPiece">
+	<div class="title">
 		﻿80% Modelling! 
 	</div>
 	<div class="date">
