added beta downloads

--- a/public/perennial.html
+++ b/public/perennial.html
@@ -37,7 +37,7 @@ NAVIGATION BAR HERE
 		DOWNLOAD ALPHA
 	</a>
 
-	<a class="downloadsLink" href="/downloadbeta">
+	<a class="downloadsLink" href="https://drive.google.com/file/d/0B9sx_t5U3fqZYUQ2bUpPcERFYjg/view?usp=sharing">
 		DOWNLOAD BETA
 	</a>
 </div>
@@ -53,7 +53,7 @@ NAVIGATION BAR HERE
 		ALPHA PRESENTATION
 	</a>
 
-	<a class="downloadsLink" href="/downloadbetapresentation">
+	<a class="downloadsLink" href="https://docs.google.com/presentation/d/1oRCwHDrHxhBKeYgVsx58MZ-uPXSNoI-RY0AcMFlHQHo/edit?usp=sharing">
 		BETA PRESENTATION
 	</a>
 </div>
