final blog post

--- a/public/blog.html
+++ b/public/blog.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
 	<meta charset = "UTF-8">
 	<title>Blog</title>
@@ -8,6 +8,55 @@
 <body>
 
 NAVIGATION BAR HERE
+
+<div class="blogPiece">
+	<div class="title">
+		﻿Final Art 
+	</div>
+	<div class="date">
+		4/21/2017
+	</div>
+	<div class="description">
+		We finished the game! Heck yes!
+	</div>
+	<img class="thirdLengthImage" src="/images/blog/portfolio_01.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_02.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_03.jpg" alt="Cool Pic">
+
+	<img class="thirdLengthImage" src="/images/blog/portfolio_04.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_05.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_06.jpg" alt="Cool Pic">
+
+	<img class="thirdLengthImage" src="/images/blog/portfolio_07.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_08.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_09.jpg" alt="Cool Pic">
+
+	<img class="thirdLengthImage" src="/images/blog/portfolio_10.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_11.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_12.jpg" alt="Cool Pic">
+
+	<img class="thirdLengthImage" src="/images/blog/portfolio_13.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_14.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_15.jpg" alt="Cool Pic">
+
+	<img class="thirdLengthImage" src="/images/blog/portfolio_16.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_17.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_18.jpg" alt="Cool Pic">
+
+	<img class="thirdLengthImage" src="/images/blog/portfolio_19.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_20.jpg" alt="Cool Pic">
+	<img class="thirdLengthImage" src="/images/blog/portfolio_21.jpg" alt="Cool Pic">
+
+	<img class="wholeLengthImage" src="/images/blog/portfolio_22.jpg" alt="COOL SHIRT">
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/QrKJMKW-TGE" frameborder="0" allowfullscreen></iframe>
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/Uo3hYmkuyhU" frameborder="0" allowfullscreen></iframe>
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/14wvKDjIO84" frameborder="0" allowfullscreen></iframe>
+
+
+</div>
 
 <div class="blogPiece">
 	<div class="title">
