last blog post fix ???

--- a/public/blog.html
+++ b/public/blog.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
 	<meta charset = "UTF-8">
 	<title>Blog</title>
@@ -11,10 +11,10 @@ NAVIGATION BAR HERE
 
 <div class="blogPiece">
 	<div class="title">
-		﻿Final Art 
+		Final Art 
 	</div>
 	<div class="date">
-		4/21/2017
+		5/1/2017
 	</div>
 	<div class="description">
 		We finished the game! Heck yes!
@@ -60,7 +60,7 @@ NAVIGATION BAR HERE
 
 <div class="blogPiece">
 	<div class="title">
-		﻿Update After Website Migration 
+		?Update After Website Migration 
 	</div>
 	<div class="date">
 		4/21/2017
@@ -79,7 +79,7 @@ NAVIGATION BAR HERE
 
 <div class="blogPiece">
 	<div class="title">
-		﻿80% Modelling! 
+		?80% Modelling! 
 	</div>
 	<div class="date">
 		4/11/2017
